first test run of data processing

--- a/data processing.ipynb
+++ b/data processing.ipynb
@@ -2,66 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "98d1441f-4c80-4e6c-a646-55f6f8837b04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing:   0%|          | 0/20001 [00:00<?, ?files/s]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 81\u001b[0m\n\u001b[1;32m     79\u001b[0m         src_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root, image)\n\u001b[1;32m     80\u001b[0m         dst_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(fake_folder, image\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 81\u001b[0m         \u001b[43mshutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopyfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdst_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m column not found in CSV file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcsv_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/packages/apps/jupyter/2023-10-09/lib/python3.11/shutil.py:269\u001b[0m, in \u001b[0;36mcopyfile\u001b[0;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m _USE_CP_SENDFILE:\n\u001b[1;32m    268\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 269\u001b[0m         \u001b[43m_fastcopy_sendfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfsrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfdst\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    270\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m dst\n\u001b[1;32m    271\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m _GiveupOnFastCopy:\n",
+      "File \u001b[0;32m/packages/apps/jupyter/2023-10-09/lib/python3.11/shutil.py:144\u001b[0m, in \u001b[0;36m_fastcopy_sendfile\u001b[0;34m(fsrc, fdst)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m    143\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 144\u001b[0m         sent \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39msendfile(outfd, infd, offset, blocksize)\n\u001b[1;32m    145\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    146\u001b[0m         \u001b[38;5;66;03m# ...in oder to have a more informative exception.\u001b[39;00m\n\u001b[1;32m    147\u001b[0m         err\u001b[38;5;241m.\u001b[39mfilename \u001b[38;5;241m=\u001b[39m fsrc\u001b[38;5;241m.\u001b[39mname\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm  # Import tqdm for progress bar\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "# Define the path to the main folder containing subfolders\n",
-    "main_folder = 'path/to/main/folder'\n",
+    "# Define the main folder path\n",
+    "main_folder = '/home/rharikr3/scratch/kaggle/latent_diffusion'\n",
+    "output_folder = '/scratch/rharikr3/output/'\n",
+    "# Check if the main folder exists\n",
+    "if not os.path.exists(main_folder):\n",
+    "    print(f\"Main folder '{main_folder}' not found.\")\n",
+    "    exit()\n",
     "\n",
-    "# Define the output folder where the separated images will be saved\n",
-    "output_folder = '/scratch/rharikr3/output/'  # Create separate folders for real and fake images here\n",
+    "# Find CSV file at the root of the main folder\n",
+    "csv_file = None\n",
+    "for file in os.listdir(main_folder):\n",
+    "    if file.endswith('.csv'):\n",
+    "        csv_file = os.path.join(main_folder, file)\n",
+    "        break\n",
     "\n",
-    "# Create separate folders for real and fake images\n",
-    "real_folder = os.path.join(output_folder, 'real')\n",
-    "fake_folder = os.path.join(output_folder, 'fake')\n",
+    "# Check if CSV file exists\n",
+    "if csv_file is None:\n",
+    "    print(\"CSV file not found in the root of the main folder.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Read the CSV file\n",
+    "df = pd.read_csv(csv_file)\n",
+    "\n",
+    "# Create real and fake folders\n",
+    "real_folder = os.path.join(main_folder, 'real_images')\n",
+    "fake_folder = os.path.join(main_folder, 'fake_images')\n",
     "os.makedirs(real_folder, exist_ok=True)\n",
     "os.makedirs(fake_folder, exist_ok=True)\n",
     "\n",
     "# Initialize progress bar\n",
-    "total_files = sum(len(files) for _, _, files in os.walk(main_folder))\n",
+    "total_files = len(df)\n",
     "progress_bar = tqdm(total=total_files, desc=\"Processing\", unit=\"files\")\n",
     "\n",
-    "# Iterate through each subfolder in the main folder\n",
-    "for subfolder in os.listdir(main_folder):\n",
-    "    subfolder_path = os.path.join(main_folder, subfolder)\n",
-    "    if os.path.isdir(subfolder_path):\n",
-    "        # Find the CSV file within the subfolder\n",
-    "        csv_file = os.path.join(subfolder_path, 'metadata.csv')\n",
-    "        if os.path.exists(csv_file):\n",
-    "            # Read the CSV file into a pandas DataFrame\n",
-    "            df = pd.read_csv(csv_file)\n",
-    "            \n",
-    "            # Iterate through each row in the DataFrame\n",
-    "            for index, row in df.iterrows():\n",
-    "                image_path = os.path.join(subfolder_path, row['image_path'])\n",
-    "                target = row['target']\n",
-    "                \n",
-    "                # Check if the image exists\n",
-    "                if os.path.exists(image_path):\n",
-    "                    # Check the target label and move the image to the corresponding folder\n",
-    "                    if target == 0:\n",
-    "                        shutil.copy(image_path, real_folder)\n",
-    "                    elif target >= 1 and target <= 6:  # Assuming target labels for fake images range from 1 to 6\n",
-    "                        shutil.copy(image_path, fake_folder)\n",
-    "                    progress_bar.update(1)  # Update progress bar for each processed file\n",
-    "                else:\n",
-    "                    print(f\"Image not found: {image_path}\")\n",
-    "        else:\n",
-    "            print(f\"CSV file not found in subfolder: {subfolder}\")\n",
-    "    else:\n",
-    "        print(f\"{subfolder} is not a directory.\")\n",
+    "# Iterate through each row in the CSV file\n",
+    "for index, row in df.iterrows():\n",
+    "    image_path = os.path.join(main_folder, row['image_path'])\n",
+    "    target_label = row['target']\n",
+    "    \n",
+    "    # Check if the image file exists\n",
+    "    if os.path.exists(image_path):\n",
+    "        if target_label == 0:\n",
+    "            shutil.copy(image_path, real_folder)\n",
+    "        elif 1 <= target_label <= 6:\n",
+    "            shutil.copy(image_path, fake_folder)\n",
+    "    \n",
+    "    # Update progress bar\n",
+    "    progress_bar.update(1)\n",
     "\n",
-    "progress_bar.close()  # Close progress bar after processing\n",
+    "# Close the progress bar\n",
+    "progress_bar.close()\n",
     "\n",
     "print(\"Images separated into real and fake folders.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fefafd50-5a25-4369-93dd-7855a9fa85d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
